Finally did it work :sob:

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,15 +13,15 @@ minecraft_version=1.21.1
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.21.1]
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.1.180
+neo_version=21.1.219
 # The Neo version range can use any version of Neo as bounds
 neo_version_range=[21,)
 # The loader version range can only use the major version of FML as bounds
-loader_version_range=[5.3,)
+loader_version_range=[5.9,)
 ## Mod Properties
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=arc_steam
+mod_id=arcane_steam
 # The human-readable display name for the mod.
 mod_name=ArcSteam
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
