--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id "java"
     id 'java-library'
     id 'maven-publish'
     id 'idea'
@@ -20,6 +21,14 @@ repositories {
 
 base {
     archivesName = mod_id
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs("src/main/java", "src/main/kotlin")
+        }
+    }
 }
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(21)
