--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
         url = 'https://thedarkcolour.github.io/KotlinForForge/'
         content { includeGroup "thedarkcolour" }
     }
+    maven { url = "https://maven.firstdark.dev/snapshots" }
 }
 
 base {
