--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -25,3 +25,10 @@ license = "${mod_license}"
     versionRange = "${minecraft_version_range}"
     ordering = "NONE"
     side = "BOTH"
+
+[[dependencies."${mod_id}"]]
+    modId = "kotlinforforge"
+    type = "required"
+    versionRange = "${loader_version_range}"
+    ordering = "AFTER"
+    side = "BOTH"
