--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@ mod_name=Koko
 mod_license=All Rights Reserved
 mod_version=1.0.0
 mod_group_id=dev.koji
-mod_authors=Koji
+mod_authors=Koji Usoki
 mod_description=Koko is a modular mod that allows you to add your own skills, their xp sources and effects.
