--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,13 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
+
 minecraft_version=1.21.1
 minecraft_version_range=[1.21.1]
 neo_version=21.1.219
 neo_version_range=[21,)
 loader_version_range=[5.9]
+
 mod_id=koko
 mod_name=Koko
 mod_license=All Rights Reserved
@@ -15,3 +17,6 @@ mod_version=1.0.0
 mod_group_id=dev.koji
 mod_authors=Koji Usoki
 mod_description=Koko is a modular mod that allows you to add your own skills, their xp sources and effects.
+
+kotlin_for_forge_version=5.9.0
+curios_api_version=9.5.1
