--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ mod_description=Koko is a modular mod that allows you to add your own skills, th
 
 kotlin_for_forge_version=5.9.0
 curios_api_version=9.5.1
+iron_spells_version=3.15.0
