--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,15 @@ neoForge {
     }
 }
 
-sourceSets.main.resources { srcDir 'src/generated/resources' }
+sourceSets {
+    main {
+        resources {
+            srcDir("src/generated/resources")
+
+            exclude("data")
+        }
+    }
+}
 
 dependencies {
     implementation "thedarkcolour:kotlinforforge-neoforge:${kotlin_for_forge_version}"
